@@ -1,5 +1,7 @@
 2008-01-06  Kouhei Sutou  <kou@cozmixng.org>
 
+	* src/rbgst-value.c: supported GST_TYPE_ARRAY.
+
 	* sample/gst-inspect.rb: added readable check.
 
 	* src/rbgst-mini-object.c: supported Gst::MiniObject <-> GValue
